--- a/base/templates/detalle_producto.html
+++ b/base/templates/detalle_producto.html
@@ -52,7 +52,7 @@
                 </div>
                 <div class="modal-footer">
                     <button id="botonCerrarModal" type="button" class="btn btn-secondary bg-gradient" data-dismiss="modal">Cerrar</button>
-                    <a href="{% url 'registro' %}"><button type="button" class="btn btn-primary bg-gradient">Regístrarme</button></a>
+                    <a href="{% url 'registro' %}"><button type="button" class="btn btn-warning bg-gradient">Regístrarme</button></a>
                   </div>
                 </div>
               </div>
