--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -86,61 +86,48 @@
           <table class="table table-sm">
             <thead>
               <tr>
-                <th colspan="2" scope="col"></th>
-                {% comment %} <th scope="col">First</th>
-                <th scope="col">Last</th>
-                <th scope="col">Handle</th> {% endcomment %}
+                <th scope="col"></th>
               </tr>
             </thead>
             <tbody>
               <tr>
-                <th scope="row">1</th>
-                <td>Nombre</td>
+                <td class="fw-bold">Nombre</td>
                 <td>{{user.first_name}}</td>
               </tr>
               <tr>
-                <th scope="row">2</th>
-                <td>Apellidos</td>
+                <td class="fw-bold">Apellidos</td>
                 <td>{{user.last_name}}</td>
               </tr>
               <tr>
-                <th scope="row">3</th>
-                <td>Correo</td>
+                <td class="fw-bold">Correo</td>
                 <td>{{user.email}}</td>
               </tr>
               <tr>
-                <th scope="row">4</th>
-                <td>Tipo de documento</td>
+                <td class="fw-bold">Tipo de documento</td>
                 <td>{{user.tipo_documento}}</td>
               </tr>
               <tr>
-                <th scope="row">5</th>
-                <td>Documento</td>
+                <td class="fw-bold">Documento</td>
                 <td>{{user.documento}}</td>
               </tr>
               <tr>
-                <th scope="row">6</th>
-                <td>Número de teléfono</td>
+                <td class="fw-bold">Número de teléfono</td>
                 <td>{{user.numero_telefono}}</td>
               </tr>
               <tr>
-                <th scope="row">7</th>
-                <td>Número de celular</td>
+                <td class="fw-bold">Número de celular</td>
                 <td>{{user.numero_celular}}</td>
               </tr>
               <tr>
-                <th scope="row">8</th>
-                <td>Dirección</td>
+                <td class="fw-bold">Dirección</td>
                 <td>{{user.direccion}}</td>
               </tr>
               <tr>
-                <th scope="row">9</th>
-                <td>Municipio</td>
+                <td class="fw-bold">Municipio</td>
                 <td>{{user.municipio}}</td>
               </tr>
               <tr>
-                <th scope="row">10</th>
-                <td>Barrio o vereda</td>
+                <td class="fw-bold">Barrio o vereda</td>
                 <td>{{user.barrio_vereda}}</td>
               </tr>
             </tbody>
