--- a/base/templates/usuario/actualizar_datos.html
+++ b/base/templates/usuario/actualizar_datos.html
@@ -16,7 +16,7 @@
       <h4><a class="nav-link" href="#">Cambiar contraseña</a></h4>
     </li>
     <li class="nav-item">
-      <h4><a class="nav-link" href="#">Eliminar Cuenta</a></h4>
+      <h4><a id="AbrirconfirmarEliminar" class="nav-link" href="#">Eliminar Cuenta</a></h4>
     </li>
   </ul>
   <br>
@@ -35,5 +35,7 @@
           </div>
       </div>   
   </div>
+
+  {% include 'usuario/modal_2.html' %}
 
 {% endblock contenido %}
