--- a/base/templates/usuario/modal.html
+++ b/base/templates/usuario/modal.html
@@ -1,4 +1,4 @@
-<!--Modal-->
+<!--Modal para listar los datos del usuario-->
 <div class="modal fade" id="modalActualizar" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
     <div class="modal-dialog" role="document">
       <div class="modal-content">
