Cambiar contraseña Ok.
Cambiar contraseña Ok. Viernes 5 de Abril.

--- a/base/templates/usuario/actualizar_datos.html
+++ b/base/templates/usuario/actualizar_datos.html
@@ -13,7 +13,7 @@
 <br>
 <ul class="nav nav-pills nav justify-content-center">
     <li class="nav-item px-5">
-      <h4><a class="nav-link" href="#">Cambiar contraseña</a></h4>
+      <h4><a class="nav-link" href="{% url 'cambiar_contraseña' %}">Cambiar contraseña</a></h4>
     </li>
     <li class="nav-item">
       <h4><a id="AbrirconfirmarEliminar" class="nav-link" href="#">Eliminar Cuenta</a></h4>
