--- a/base/templates/usuario/cambiar_contrasenia.html
+++ b/base/templates/usuario/cambiar_contrasenia.html
@@ -10,8 +10,9 @@
     {% endfor %}
     {% endif %}
 
-    <div class="container w-75 bg-dark bg-gradient text-white-50 rounded shadow-sm mt-2 mb-2">
-        <h3>Cambio de contraseña</h3>
+    <div class="container w-75 bg-dark bg-opacity-10 bg-gradient text-dark d-flex justify-content-center rounded shadow-sm mt-2 mb-2">
+      <div class="col-sm-12 col-md-8">
+        <h4>Cambio de contraseña</h4>
         <div class="card mb-3">
             <div class="card-body text-dark">
                 <form method="POST">
@@ -23,6 +24,7 @@
             </div>
           </div>
           <br>
+        </div>  
     </div>
 
 {% endblock contenido %}
