--- a/base/templates/detalle_producto.html
+++ b/base/templates/detalle_producto.html
@@ -3,6 +3,16 @@
 {% load bootstrap_icons %}
 
 {% block contenido %}
+
+{% if messages %}
+  {% for message in messages %}
+    <div class="alert alert-dismissible fade show fw-bold {% if message.tags == 'success'%}alert-success{%else%}alert-danger{%endif%}" role="alert">
+      <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
+      {{ message }}
+    </div>
+  {% endfor %}
+{% endif %}
+
 {% if user.is_authenticated %}
 {% include 'carrito.html' %}
     <!-- Contenido para usuarios autenticados -->
@@ -29,7 +39,7 @@
             {% endif %}
 
             {% if user.is_authenticated %}
-            <a href="#"><button type="button" class="btn btn-outline-success bg-gradient">Agregar al carrito</button></a>
+            <a href="{% url 'agregar_al_carrito' producto.id %}"><button type="button" class="btn btn-outline-success bg-gradient">Agregar al carrito</button></a>
             {% else %}
 
             <!-- Button trigger modal -->
