--- a/base/templates/index.html
+++ b/base/templates/index.html
@@ -64,6 +64,7 @@
 <section class="Descuentos">
     <h2 class="text-center">Descuentos</h2>
         <div class="container">
+          {{carrito}}
             <div class="row">
                 <div class="col-6">
                     {% for info in info_descuento%}
