--- a/base/templates/comercial/login.html
+++ b/base/templates/comercial/login.html
@@ -17,7 +17,7 @@
 
 <div class="container w-75 bg-dark bg-opacity-10 bg-gradient rounded shadow-sm mt-2 mb-2">
   {% if messages %}
-  {% for message in messages %}
+  {% for message in messages %} <!-- Clase alert condicionada según el tag del mensaje -->
     <div class="alert alert-dismissible fade show fw-bold {% if message.tags == 'success'%}alert-success{%else%}alert-danger{%endif%}" role="alert">
       <button type="button" class="btn-close" data-bs-dismiss="alert" aria-label="Close"></button>
       {{ message }}
@@ -31,7 +31,7 @@
           <h4 class="text-center mb-5">Inicie sesión para continuar</h4>
             <!-- Formulario -->
             <form method="post" class="bg-transparent align-items-center text-center">
-              {% csrf_token %}
+              {% csrf_token %} <!-- Token obligatorio para seguridad en formularios -->
               <div class="form-group" class="mb-4 mt-4 text-start">
                 <label for="username">Username</label>
                 <input type="text" name="username" class="form-control">
