--- a/base/templates/usuario/modal_2.html
+++ b/base/templates/usuario/modal_2.html
@@ -18,7 +18,7 @@
       </div>
     </div>
   </div>
-
+  <!-- Scripts de javascript y Jquery para el funcionamiento de modales  -->
   <script>
     $(document).ready(function(){
       // Evento click para abrir el modal
