Realizar compra óptima.

--- a/base/templates/carrito.html
+++ b/base/templates/carrito.html
@@ -94,7 +94,8 @@
             {% if request.session.carrito.items %}
               <tfoot>
                 <td colspan="3"><h6>Subotal: <b>$ {{subtotal}}</b><h6></td>
-                <td><button type="button" class="btn btn-light btn-sm">Comprar</button></td>
+                <td><a href="{% url 'comprar' %}" class="btn btn-light btn-sm">Comprar</a></td>
+                <!--<td><button type="button" class="btn btn-light btn-sm">Comprar</button></td>-->
                 <td><a href="{% url 'vaciar_carrito' %}" class="btn btn-light btn-sm">Vaciar carrito</a></td>
               </tfoot>
             {% else %}
