--- a/base/templates/partials/header.html
+++ b/base/templates/partials/header.html
@@ -49,7 +49,7 @@
                       <span class="visually-hidden">Toggle Dropdown</span>
                     </button>
                     <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                      <li><a class="dropdown-item" href="#">{% bs_icon 'bag-fill' %}Mis Compras</a></li>
+                      <li><a class="dropdown-item" href="{% url 'compras' %}">{% bs_icon 'bag-fill' %}Mis Compras</a></li>
                       <li id="abrirActualizar"><a class="dropdown-item">{% bs_icon 'arrow-clockwise' %}Ver mis Datos</a></li>
                           <li><hr class="dropdown-divider"></li> 
                       <li><a class="dropdown-item" href="{% url 'logout' %}">{% bs_icon 'box-arrow-left' %}Cerrar Sesión</a></li>
