--- a/base/templates/comercial/mis_compras.html
+++ b/base/templates/comercial/mis_compras.html
@@ -5,6 +5,9 @@
 <div class="container">
     <div class="row">
         <div class="col">
+            {% if not compras_usuario %}
+                <h2>No tienes compras realiadas</h2>
+            {% else %}
             <table class="table table-striped table-hover caption-top">
                 <caption class="text-dark">Tus Compras</caption>
                 <thead>
@@ -32,6 +35,7 @@
                     {% endfor %}
                 </tbody>
             </table>
+            {% endif %}
         </div>
     </div>
 </div>
