--- a/base/templates/comercial/mis_compras.html
+++ b/base/templates/comercial/mis_compras.html
@@ -2,11 +2,14 @@
 
 {% block contenido %}
 
-<div class="container">
+<div class="container h-100 w-75">
     <div class="row">
         <div class="col">
             {% if not compras_usuario %}
+                <br>
                 <h2>No tienes compras realiadas</h2>
+                <br>
+                <br>
             {% else %}
             <table class="table table-striped table-hover caption-top">
                 <caption class="text-dark">Tus Compras</caption>
@@ -37,6 +40,18 @@
             </table>
             {% endif %}
         </div>
+    
+    </div>
+    <div class="row">
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
+        <br>
     </div>
 </div>
 
