--- a/base/templates/comercial/mis_compras.html
+++ b/base/templates/comercial/mis_compras.html
@@ -11,7 +11,7 @@
                 <br>
                 <br>
             {% else %}
-            <table class="table table-striped table-hover caption-top" id="tabla-usuarios">
+            <table class="table table-striped table-hover caption-top w-100" id="tabla-usuarios" class="display-nowrap">
                 <caption class="text-dark">Tus Compras</caption>
                 <thead>
                     <tr class="table-secondary">
