--- a/base/templates/comercial/mis_compras.html
+++ b/base/templates/comercial/mis_compras.html
@@ -33,7 +33,7 @@
                                 <td>No entregada</td>
                             {% endif %}
                             <td>$ {{compra.total}}</td>
-                            <td></td>
+                            <td><a href="{% url 'detalle-compra' compra.id %}" class="btn btn-secondary btn-md">Ver orden/envío</td>
                         </tr>
                     {% endfor %}
                 </tbody>
